data/stackoverflow-snippets/fsharp/208
# let t = TypeSymbol {id = "a"};;
val t : ts symbol = TypeSymbol {id = "a"}
# let v = VariableSymbol {id = "b"; ty = t};;
val v : vs symbol = VariableSymbol {id = "b"; ty = TypeSymbol {id = "a"}}
# let ve = VariableSymbol {id = "c"; ty = v};;
Characters 41-42:
  let ve = VariableSymbol {id = "c"; ty = v};;
                                          ^
Error: This expression has type vs symbol
       but an expression was expected of type ts symbol
       Type vs is not compatible with type ts   
